Prevent pool buttons from overflowing.

--- a/ui/lobby/css/app/_pool.scss
+++ b/ui/lobby/css/app/_pool.scss
@@ -8,7 +8,6 @@
   padding-top: 9px;
   background-color: transparent !important;
   box-shadow: none;
-  overflow: visible !important; // for button shadows
 
   @include fluid-size('font-size', 14px, 25px);
 
